force-app/main/default/objects/Opt_Out_From_PFC__c/Opt_Out_From_PFC__c.object-meta.xml
<CustomObject>
    <description>Inbound from PFC</description>
    <label>Opt Out From PFC</label>
    <nameField>
        <displayFormat>OPT-{0000}</displayFormat>
        <label>Opt Out From PFC Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Opt Out From PFCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>