force-app/main/default/objects/Opt_Out_From_PFC__c/fields/Contact_Candidate__c.field-meta.xml
<CustomField>
    <fullName>Contact_Candidate__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact &amp; Candidate</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Opt Out From PFCs</relationshipLabel>
    <relationshipName>Opt_Out_From_PFCs</relationshipName>
    <type>Lookup</type>
</CustomField>