force-app/main/default/objects/Opt_Out_From_PFC__c/fields/Disqualified__c.field-meta.xml
<CustomField>
    <fullName>Disqualified__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When this field is checked contact disqualified will be updated</description>
    <label>Disqualified</label>
    <type>Checkbox</type>
</CustomField>