force-app/main/default/objects/Opt_Out_From_PFC__c/fields/Optout__c.field-meta.xml
<CustomField>
    <fullName>Optout__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Optout?</label>
    <type>Checkbox</type>
</CustomField>