force-app/main/default/objects/Opt_Out_From_PFC__c/fields/Processed__c.field-meta.xml
<CustomField>
    <fullName>Processed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field is used to check whether the record is processed or not</description>
    <label>Processed?</label>
    <type>Checkbox</type>
</CustomField>