force-app/main/default/objects/Opt_Out_From_PFC__c/fields/Sent_to_PFCR__c.field-meta.xml
<CustomField>
    <fullName>Sent_to_PFCR__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Sent to PFCR?</label>
    <type>Checkbox</type>
</CustomField>